Added local images and minor fix

--- a/lighthouse.html
+++ b/lighthouse.html
@@ -51,13 +51,13 @@
     <section class="container-fluid px-0">
         <div class="row align-items-center mx-0 px-0">
             <div class="col-lg-6 p-0 order-lg-2">
-                <img class="img-fluid" src="https://images.unsplash.com/photo-1512649408904-c0a00fb810da?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1031&q=80" alt="Marblehead Lighthouse" id="Pg-Light">
+                <img class="img-fluid" src="img\img1.jpg" alt="Marblehead Lighthouse" id="Pg-Light">
             </div>
             <div class="col-lg-6 py-0 order-lg-1">
                 <div class="text-white text-center">
                     <h3 class="display-5 pt-4 mb-1">Pigeon Point<br>Lighthouse</h3>
                     <div class="my-0 py-0">California, USA</div>
-                    <div class="p-4 mt-2">
+                    <div class="p-4 mt-2 article">
                     <p>Pigeon Point Light Station is a lighthouse built in 1871 to guide ships on the Pacific coast of California. It is the tallest lighthouseon the West Coast of the United States.</p>
                     <p>The lighthouse and the land around have been preserved as Pigeon Point Light Station State Historic Park, a California state park. The lighthouse is also listed on the National Register of Historic Places, and designated as a California Historical Landmark.</p>
                     </div>
@@ -68,13 +68,13 @@
     <section class="container-fluid px-0">
         <div class="row align-items-center px-0 mx-0">
             <div class="col-lg-6 px-0">
-                <img class="img-fluid" src="https://images.unsplash.com/photo-1559061156-4a46ec29107d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80" alt="Les Eclaireurs Lighthouse" id="Le-Light">
+                <img class="img-fluid" src="img\img2.jpg" alt="Les Eclaireurs Lighthouse" id="Le-Light">
             </div>
             <div class="col-lg-6">
                 <div class="text-white text-center">
                     <h3 class="display-5 pt-4 mb-1">Les Eclaireurs<br>Lighthouse</h3>
                     <div class="my-0 py-0">Tierra del Fuego, Argentina</div>
-                    <div class="p-4 mt-2">
+                    <div class="p-4 mt-2 article">
                     <p> The Les Eclaireurs Lighthouse stands tall on the northeasternmost island of the Les Eclaireurs Islands. It is sometimes also referred to as the Lighthouse at the End of the World. This is because it is located in the Southernmost part of South America. </p>
                     <p>The lighthouse is still in operation, is remote-controlled, automated, uninhabited and is not open to the public, guarding the sea entrance to Ushuaia. Electricity is supplied by solar panels. The lighthouse was put into service on December 23, 1920.</p>
                     </div>
@@ -84,13 +84,13 @@
         <section class="container-fluid px-0">
             <div class="row align-items-center px-0 mx-0">
                 <div class="col-lg-6 px-0 order-lg-2">
-                    <img class="img-fluid px-0 mx-0" src="https://upload.wikimedia.org/wikipedia/commons/3/35/%D0%9C%D0%B0%D1%8F%D0%BA_%D0%90%D0%BD%D0%B8%D0%B2%D0%B0.jpg" alt="Aniva Lighthouse" id="An-Light">
+                    <img class="img-fluid px-0 mx-0" src="img\img3.jpg" alt="Aniva Lighthouse" id="An-Light">
                 </div>
                 <div class="col-lg-6 order-lg-1">
                     <div class="text-white text-center">
                         <h3 class="display-5 pt-4 mb-1">Aniva Lighthouse</h3>
                         <div class="my-0 py-0">Aniva, Russia</div>
-                        <div class="p-4 mt-2">
+                        <div class="p-4 mt-2 article">
                         <p> The Aniva lighthouse is one of the most inaccessible lighthouses in Russia. For years, it had been warning ships off the dangerous coast of the rocky Aniva Cape in the Sea of Okhotsk. Today, it stands abandoned, but remains a highly popular tourist attraction.</p>
                         <p> In 1990, Russia recalled the personnel from the lighthouse, switching it instead to an automatic mode of operation. The lighthouse was equipped with radioisotope thermoelectric generators that powered it until 2006. Today, however, the structure stands unused and abandoned. </p>
                         </div>
